--- a/CWBDataApp/templates/CWBDataApp/report.html
+++ b/CWBDataApp/templates/CWBDataApp/report.html
@@ -33,7 +33,7 @@
 
         <br>
 
-          <input type="submit" name="enterNewAverage" value="Update">
+          <input type="submit" name="enterNewAverage" value="Send Message">
       </div>
     </form>
   </div>
