--- a/CWBDataApp/templates/CWBDataApp/UpdateBatch.html
+++ b/CWBDataApp/templates/CWBDataApp/UpdateBatch.html
@@ -91,7 +91,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -128,7 +128,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -165,7 +165,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -202,7 +202,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -239,7 +239,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -276,7 +276,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -313,7 +313,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -351,7 +351,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -389,7 +389,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
@@ -427,7 +427,7 @@
               <option value="None">None</option>
               {% if allMaterials %}
                 {% for entry in allMaterials %}
-                    <option value="{{ entry.materialname }}">{{entry.materialname}} ({{ entry.supplier.supplier }} {{entry.numberofboxes}} boxes)</option>
+                    <option value="{{ entry.materialname }}">{{entry.materialname}} (${{ entry.priceperpound }} - {{entry.numberofboxes}} boxes)</option>
                 {% endfor %}
               {% endif %}
             </select>
