Minor Bug fixes and added printable forms

--- a/CWBDataApp/templates/CWBDataApp/MaterialInventoryQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialInventoryQuery.html
@@ -44,10 +44,17 @@
   </div>
 
   <div class="justify-content-center row no-gutters">
-    <form action="{% url 'CWBDataApp:MaterialInventoryExcel'%}" method="post">
+    <form action="{% url 'CWBDataApp:MaterialInventoryPdf'%}" method="post">
       <div class="d-inline-flex flex-column">
         {% csrf_token %}
-        <input type="submit" name="Download" value="Download Excel File of Entire Material Inventory">
+        <input class="submitButton" type="submit" name="Download" value="Download Excel File of Entire Material Inventory">
+      </div>
+    </form>
+
+    <form action="{% url 'CWBDataApp:MaterialInventoryPdf'%}" method="post">
+      <div class="d-inline-flex flex-column">
+        {% csrf_token %}
+        <input class="submitButton" type="submit" name="Download" value="Print Data">
       </div>
     </form>
   </div>
