--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -86,7 +86,7 @@
                 <a class="nav-link" href="{% url 'CWBDataApp:PicSum'%}">Pic&Sum</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'CWBDataApp:help'%}">Forms</a>
+                <a class="nav-link" href="{% url 'CWBDataApp:Report'%}"> C.I.S</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkHelp" role="button" data-toggle="dropdown" aria-haspopup="true "aria-expanded="false">
@@ -101,7 +101,7 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateSupplier'%}"> Update Supplier</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddProfileAverage'%}"> Add Profile Average</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateProfileAverage'%}"> Update Profile Average</a>
-                  <a class="dropdown-item" href="{% url 'CWBDataApp:Report'%}"> Report Errors or Suggestions</a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:help'%}">Forms</a>
                   <a class="dropdown-item"  href="{% url 'CWBDataApp:logout' %}">Log Out</a>
                 </div>
               </li>
