--- a/CWBDataApp/templates/CWBDataApp/MaterialInventoryQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialInventoryQuery.html
@@ -51,7 +51,7 @@
       </div>
     </form>
 
-    <form action="{% url 'CWBDataApp:MaterialInventoryPdf'%}" method="post">
+    <form action="{% url 'CWBDataApp:MaterialInventoryPdf'%}" target="_blank" method="post">
       <div class="d-inline-flex flex-column">
         {% csrf_token %}
         <input class="submitButton" type="submit" name="Download" value="Print Data">
