--- a/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
+++ b/CWBDataApp/templates/CWBDataApp/BatchCostTracking.html
@@ -81,8 +81,8 @@
           </div>
 
           <div class="inline-flex inputBox">
-            <label for="weight1">Weight 1*: </label>
-            <input id="weight1" type="number" name="weight1" {% if batch %} value="{{batch.weight1}}" {% else %} value="1" {% endif %} min=0>
+            <label  for="weight1">Weight 1*: </label>
+            <input class="weight" id="weight1" type="number" name="weight1" {% if batch %} value="{{batch.weight1}}" {% else %} value="1" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -119,7 +119,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight2">Weight 2*: </label>
-            <input id="weight2" type="number" name="weight2" {% if batch %} value="{{batch.weight2}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight2" type="number" name="weight2" {% if batch %} value="{{batch.weight2}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -156,7 +156,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight3">Weight 3*: </label>
-            <input id="weight3" type="number" name="weight3" {% if batch %} value="{{batch.weight3}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight3" type="number" name="weight3" {% if batch %} value="{{batch.weight3}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -193,7 +193,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight4">Weight 4*: </label>
-            <input id="weight4" type="number" name="weight4" {% if batch %} value="{{batch.weight4}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight4" type="number" name="weight4" {% if batch %} value="{{batch.weight4}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -230,7 +230,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight5">Weight 5*: </label>
-            <input id="weight5" type="number" name="weight5" {% if batch %} value="{{batch.weight5}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight5" type="number" name="weight5" {% if batch %} value="{{batch.weight5}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -267,7 +267,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight6">Weight 6*: </label>
-            <input id="weight6" type="number" name="weight6" {% if batch %} value="{{batch.weight6}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight6" type="number" name="weight6" {% if batch %} value="{{batch.weight6}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -300,7 +300,7 @@
           <!-- -->
           <div class="inline-flex inputBox">
             <label for="material72">Or Custom Material: </label>
-            <input id="material72" type="text" name="material72" {% if batch %} value="{{batch.material72}}" {% endif %} maxlength="40">
+            <input class="weight" id="material72" type="text" name="material72" {% if batch %} value="{{batch.material72}}" {% endif %} maxlength="40">
           </div>
 
           <div class="inline-flex inputBox">
@@ -343,7 +343,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight8">Weight 8*: </label>
-            <input id="weight8" type="number" name="weight8" {% if batch %} value="{{batch.weight8}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight8" type="number" name="weight8" {% if batch %} value="{{batch.weight8}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -381,7 +381,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight9">Weight 9*: </label>
-            <input id="weight9" type="number" name="weight9" {% if batch %} value="{{batch.weight9}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight9" type="number" name="weight9" {% if batch %} value="{{batch.weight9}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -419,7 +419,7 @@
 
           <div class="inline-flex inputBox">
             <label for="weight10">Weight 10*: </label>
-            <input id="weight10" type="number" name="weight10" {% if batch %} value="{{batch.weight10}}" {% else %} value="0" {% endif %} min=0>
+            <input class="weight" id="weight10" type="number" name="weight10" {% if batch %} value="{{batch.weight10}}" {% else %} value="0" {% endif %} min=0>
           </div>
 
           <div class="inline-flex inputBox">
@@ -450,8 +450,12 @@
           </div>
 
           <div class="inline-flex inputBox">
+            <label for="colourPercent">Colour Percentage: </label>
+            <input id="colourPercent" type="number" name="colourPercent"  value="0" step=any />
+            <input id="weightSum" hidden />
+            <p id="boldMessage"> If you added shred weight above in the material section, then it is included in the colour calculation </p>
             <label for="colourWeight">Colour Weight: </label>
-            <input id="colourWeight" type="number" name="colourWeight" {% if batch %} value="{{batch.colourWeight}}" {% else %} value="0" {% endif %} step="any">
+            <input id="colourWeight" type="number" name="colourWeight" {% if batch %} value="{{batch.colourWeight}}" {% else %} value="0" {% endif %} step="any" />
           </div>
 
           <div class="inline-flex inputBox">
@@ -459,7 +463,13 @@
             <input id="colourPrice" type="number" name="colourPrice" {% if batch %} value="{{batch.colourPrice}}" {% else %} value="0" {% endif %} step="any">
           </div>
 
-          <br>
+          <br><br>
+          <p> -------------------------------------------------------------- </p>
+
+          <div class="inline-flex inputBox">
+            <label for="foamPercent">Foam Percentage: </label>
+            <input id="foamPercent" type="number" name="foamPercent"  value="0" step=any />
+          </div>
 
           <div class="inline-flex inputBox">
             <label for="foamWeight">Foam Weight: </label>
@@ -480,4 +490,11 @@
         </div>
       </form>
     </div>
+
+
 {% endblock content %}
+
+{% block js %}
+  {% load static %}
+  <script src="{% static 'CWBDataApp/batchsum.js' %}"> </script>
+{% endblock js %}
